[package]
name = "pazeifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
image = "0.24.6"
openssl-sys = { version = "0.9.87", features = ["vendored"] }
poise = "0.5.5"
reqwest = "0.11.17"
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
